Update and rename Website.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Sizzle Smoke Restaurant || Avinav Takkar</title>
+    <title>Sizzle Smoke Restaurant || S.Kumar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
