--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p><a href="">PREV</a><a href="">NEXT</a></p></div>
             
             <div class="notification-video">
-             <video src="mixkit-healthy-foods-diet-yogurt-and-muesli-with-pomegranates-5689-medium.mp4"></video>
+             <video src="mixkit-healthy-foods-diet-yogurt-and-muesli-with-pomegranates-5689-medium.mp4" autoplays="autoplays"></video>
             </div>
         </div>
     </div>
